# gfeat

./: .buildinfo  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  api.html  default_data.sh  environment.yml  examples.html  genindex.html  gfeat  gfeatpy.html  great  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: pydocs.yml  python-publish.yml
_images/: inheritance-a5376ea8089c471c4ad02ca17bd7664fee8b483a.png.map  inheritance-c9062672ec4b97e96c1ca7f0f2b52621bb63df58.png.map
_modules/: index.html
_modules/gfeatpy/: plotting.html
_sources/: api.rst.txt  gfeatpy.rst.txt  installation.rst.txt
_sources/notebooks/single-pair/: matrix-structure.ipynb.txt
gfeatpy/: gravity.py  main.cpp  observation.py  plot.py  plotting.py  py_gravity.hpp  py_observation.hpp  py_utils.hpp  utils.py
include/gfeat/: Planet.hpp
include/gfeat/gravity/: AOD1B.hpp  Functionals.hpp  GravityField.hpp  SphericalHarmonics.hpp  SphericalHarmonicsCovariance.hpp
include/gfeat/observation/: AbstractKiteSystem.hpp  AlongTrack.hpp  BaseObservation.hpp  Collinear.hpp  Constellation.hpp  CrossTrack.hpp  GPS.hpp  MultiObservation.hpp  Potential.hpp  Radial.hpp
include/gfeat/utils/: Coordinates.hpp  FileReader.hpp  Logger.hpp  RGT.hpp  Sinex.hpp
include/great/: Planet.hpp
include/great/gravity/: AOD1B.hpp  GravityField.hpp  SphericalHarmonics.hpp  SphericalHarmonicsError.hpp
include/great/observation/: AbstractKiteSystem.hpp  BaseMultiObservation.hpp  BaseObservation.hpp  Constellation.hpp  CrossTrack.hpp  Radial.hpp
include/great/utils/: FileReader.hpp  Logger.hpp
notebooks/gravity-field-data/: aod1b.html  aod1b.ipynb  monthly.html  normals.html  static.html
notebooks/multiple-pair/: bender.html  longitude-policy.html
notebooks/single-pair/: grace-resonant.html  grace.html  grace.ipynb  ground-track-analysis.html  ground-track-analysis.ipynb  matrix-structure.html  regularized.html  sensitivity.html  sensitivity.ipynb
pydocs/: conf.py  examples.rst  gfeatpy.rst  index.rst  requirements.txt
pydocs/_static/: custom.css
pydocs/notebooks/: monthly.ipynb  normals.ipynb  static.ipynb
pydocs/notebooks/gravity-field-data/: aod1b.ipynb  monthly.ipynb  static.ipynb
pydocs/notebooks/gravity-field-data/.ipynb_checkpoints/: aod1b-checkpoint.ipynb  monthly-checkpoint.ipynb  normals-checkpoint.ipynb
pydocs/notebooks/multiple-pair/: bender.ipynb
pydocs/notebooks/single-pair/: grace-resonant.ipynb  matrix-structure.ipynb  regularized.ipynb  sensitivity.ipynb
pydocs/notebooks/single-pair/.ipynb_checkpoints/: grace-checkpoint.ipynb  grace-resonant-checkpoint.ipynb  sensitivity-checkpoint.ipynb
tests/: CMakeLists.txt
tests/gravity/: CMakeLists.txt  TestAOD1B.cpp  TestFunctionals.cpp  TestGravityField.cpp  TestSphericalHarmonics.cpp  TestSphericalHarmonicsCovariance.cpp  TestSphericalHarmonicsError.cpp
tests/observation/: CMakeLists.txt  TestBender.cpp  TestCollinear.cpp  TestConstellation.cpp  TestPotential.cpp  TestRadial.cpp
