[build-system]
requires = [
  "scikit-build-core>=0.3.3", 
  "pybind11", 
  "pybind11-stubgen",
  ]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.args = ["-DCMAKE_BUILD_TYPE=Release", "-DBUILD_GFEATPY=ON"]

[project]
name = "gfeatpy"
version = "0.0.1"
description="A Python wrapper for a C++ gravity field error analysis toolkit. "
readme = "README.md"
authors = [
  { name = "Gabriel Valles", email = "gvallesv@outlook.es" },
]
requires-python = ">=3.11"