[build-system]
requires = [
  "scikit-build-core>=0.3.3", 
  "pybind11", 
  "pybind11-stubgen", 
  ]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.args = ["-DBUILD_GFEATPY=ON", "-DPROJECT_VERSION=0.1.1"]

[project]
name = "gfeatpy"
version = "0.1.1"
description="A Python wrapper for a C++ gravity field error analysis toolkit. "
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "Gabriel Valles", email = "gvallesv@outlook.es" },
]
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.5",
  "cartopy>=0.21.1"
]